Bug 1422475: Create FilterNodes on the paint thread when using Direct2D. r=dvander

MozReview-Commit-ID: tt9pRshj6i